Adding a background image and a title

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!doctype html>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Space contact</title>
+    </head>
+    <body>
+        <section class="start">
+            <div class="logo"></div>
+            <h1 class="title">Envia un mensage al espacio</h1>
+        </section>
+    </body>
+</html>
