Making some boxes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <title>Space contact</title>
     </head>
     <body>
+        <section class="boxes">
+            <div class="box id00"><strong>00</strong></div>
+            <div class="box id01"><strong>01</strong></div>
+            <div class="box id02"><strong>02</strong></div>
+        </section>
         <section class="start">
             <div class="logo"></div>
             <h1 class="title">Envia un mensage al espacio</h1>
