Adding a form for sending the message

--- a/index.html
+++ b/index.html
@@ -12,9 +12,31 @@
             <div class="box id01"><strong>01</strong></div>
             <div class="box id02"><strong>02</strong></div>
         </section>
-        <section class="start">
+        <section class="form">
             <div class="logo"></div>
-            <h1 class="title">Envia un mensage al espacio</h1>
+            <h1 class="title">Envia un mensaje al espacio</h1>
+            <form>
+                <input
+                    type="text"
+                    class="nombre"
+                    name="nombre"
+                    placeholder="Escribe tu nombre"
+                />
+                <input
+                    type="email"
+                    class="email"
+                    name="email"
+                    placeholder="Escribe tu email"
+                />
+                <textarea
+                    class="mensaje"
+                    name="mensaje"
+                    rows="5"
+                    cols="50"
+                    placeholder="Escribe tu mensaje aquí"
+                ></textarea>
+                <input type="submit" value="Enviar" />
+            </form>
         </section>
     </body>
 </html>
