Making a table and adding a parallax effect

--- a/index.html
+++ b/index.html
@@ -38,5 +38,44 @@
                 <input type="submit" value="Enviar" />
             </form>
         </section>
+        <h1 class="font-white">Estas personas han enviado un mensaje</h1>
+        <section class="table-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Edad</th>
+                        <th>País</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Carlos</td>
+                        <td>22</td>
+                        <td>Cuba</td>
+                    </tr>
+                    <tr>
+                        <td>Maria</td>
+                        <td>25</td>
+                        <td>Colombia</td>
+                    </tr>
+                    <tr>
+                        <td>Jacobo</td>
+                        <td>19</td>
+                        <td>Colombia</td>
+                    </tr>
+                    <tr>
+                        <td>Yeison</td>
+                        <td>32</td>
+                        <td>Peru</td>
+                    </tr>
+                    <tr>
+                        <td>Nicol</td>
+                        <td>20</td>
+                        <td>Estados unidos</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </body>
 </html>
